Idem précédent (au cas où bug de mon navigateur..).

--- a/wiki/Kademlia.wiki
+++ b/wiki/Kademlia.wiki
@@ -86,36 +86,18 @@ Les alpha contacts ainsi sélectionnés forment une liste appelée Shortlist à 
     -envoie de requêtes de type FIND_NODE de façon parallèle et asynchrone vers tout les nœud de la liste.
     -chaque nœud présent répond par k triplets, si l'un des nœud ne répond pas , il est enlevé temporairement de la Shortlist.
     -la Shortlist est remplie avec les contacts reçues en réponse.
-    -à partir de la nouvelle liste on sélectionne alpha contact a nouveau, a condition qu'il n'aient pas etait selectionnés avant
+    -à partir de la nouvelle liste on sélectionne alpha contact à nouveau, à condition qu'il n'aient pas été sélectionnés avant
+    -envoie de requêtes de type FIND_NODE vers les nouveaux nœud sélectionnés.
+    -...
 
-
-	-envoie de requêtes de type FIND_NODE vers les nouveaux nœud sélectionnés
-
-
-	-...
-
-
-
-A chaque recherche le nœud le plus proche est marqué ClosestNode. si aucun nœud n'est trouvé choisi d'autre nœud de la ShortList et relance la recherche
-.
-
+A chaque recherche le nœud le plus proche est marqué ClosestNode. Si aucun nœud n'est trouvé, on choisi d'autres nœuds de la ShortList et relance la recherche.
 
 La recherche continue ainsi jusqu'à ce que les valeur retournées ne contiennent plus de nœud plus proche que "ClosestNode" ou jusqu'à ce que le nœud initiant la recherche ait accumulé k nœud actifs.
 
+===Valeur de Alpha===
 
+Généralement alpha=3 ce qui corresponde au nombre de requêtes parallèles. chaque itération s'effectue après un délai raisonnable (valeur non spécifiée) ainsi les valeurs retournées restent multiples de alpha sans pour autant devenir trop grands.
 
+==Trouver une ressource==
 
-
-* Valeur de Alpha: 
-
-Généralement alpha=3 ce qui corresponde au nombre de requêtes parallèles. chaque itération s'effectue après un délai raisonnable(valeur non spécifiée) ainsi les valeurs retourné restent multiple de alpha sans pour autant devenir trop grands.
-
-
-
-* Trouver une ressource: 
-
-Pour cela on utilise le même algorithme que pour localiser un nœud en remplaçant FIND_NODE par FIND_VALUE, mais celui ci s'arrête des que la ressource est trouvée. pour assurer la disponibilité d'une ressource celle ci est stocké simultanément sur plusieurs nœuds..
-
-
-
-.
+Pour cela on utilise le même algorithme que pour localiser un nœud en remplaçant FIND_NODE par FIND_VALUE, mais celui ci s'arrête dès que la ressource est trouvée. pour assurer la disponibilité d'une ressource celle ci est stockée simultanément sur plusieurs nœuds..
